# tracking-objects

./: CMakeLists.txt  README.md  Source.cpp
headers/: Header.h
include/: Header.h  globals.h
src/: Source.cpp  helpers.cpp
